2002-05-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%files data): removed potd/astronomy from the
	%doc list.

2002-05-29  Sven Hartge  <netcomics@ds9.argh.org>

        * MANIFEST, Makefile.PL, lib/astronomy: Since no one objected:
        Moving astronomy back into lib

2002-05-26  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/penny_arcade: closed Bug# 550505, module fixed

2002-05-24  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/keenspot: expanded exists-lists for wendy, simplified the
        return-undef expression, changed cutewendy to exists-list based
        approach. Updated wendy release cycle
        * Makefile.PL, lib/bf, MANIFEST: added module for German
        Userfriendly (Benutzerfreundlich)

2002-05-24  Elliot Glaysher  <glaysher@umich.edu>

	* lib/helen: Fix by sizer. (see ML for more info on this!)
	* lib/comicspage: Fixed by sizer

2002-04-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/animation_express (ae): Added support for mini, animated gifs.

2002-04-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/Comic_Module-HOWTO.html: Added a description of the new
	volatile field.
	* Netcomics/Config.pm.in: Made same change as in netcomicsrc
	* netcomicsrc: Made the webpage_index_title not copy in the
	webpage_title so that it can change when -wt is used on the
	commandline.
	* Netcomics/Factory.pm (get_comics): Fixed bug where .rli file not
	updated to increment the number of tries when func field is dummy
	and not regetting the rli from the module if reloaded, not being
	skipped, and the date wasn't explicitely asked for.  Also fixed
	bug where subdir created when only tasks are being printed.
	(build_rli_array_helper): Added a new rli field: volatile.  This
	is an array of fields which can change.  This is used to know what
	fields to copy from an old rli when it's been reloaded.  Also,
	added deleting the reloaded field once the fields have been copied