@@ -138,9 +138,9 @@ its own code.
 
 
 <HR>
-<ADDRESS><A HREF="http://www.cs.rose-hulman.edu/~hochstrb/">Ben Hochstedler</A> &lt<A HREF="mailto:hochstrb@cs.rose-hulman.edu">hochstrb@cs.rose-hulman.edu</A>&gt</ADDRESS>
+<ADDRESS><a target="_top" href="http://netcomics.sf.net/">Netcomics Maintainers</a> &lt<a href="mailto:netcomics-maintainers@lists.sf.net">netcomics-maintainers@lists.sf.net</a>&gt</ADDRESS>
 <SPAN CLASS=TimeStamp>
-Last modified: Tue Mar 23 09:22:05 CST 1999
+Last modified: Thu May 30 08:34:58 CDT 2002
 </SPAN>
 </BODY>
 </HTML>
